@startuml waitable queue

class WQueue <typename T, class Container>
{
    - m_container: Container
    - m_mutex: TimedMutex
    - m_cv: ConditionVariable

    + void Pop(out_p: T*)
    + Pop(out_p: T*, timeToWait: const std::chrono::milliseconds&) : wqueue_status
    + void Push(val: const T&)
    + bool IsEmpty(): bool
}

class TimedMutex
{
    
}

class ConditionVariable
{
    
}

enum wqueue_status
{
    SUCCESS
    TIME_OUT_EMPTY
    TIME_OUT_LOCK
}

/' realtions '/
WQueue *-- TimedMutex
WQueue *-- ConditionVariable

@enduml